syntax = "proto3";
package chain4energy.c4echain.cfeclaim;

import "gogoproto/gogo.proto";
import "c4echain/cfeclaim/campaign.proto";
import "c4echain/cfeclaim/mission.proto";
import "c4echain/cfeclaim/claim_record.proto";

option go_package = "github.com/chain4energy/c4e-chain/x/cfeclaim/types";

// GenesisState defines the cfeclaim module's genesis state.
message GenesisState {
  repeated Campaign campaigns = 1 [
    (gogoproto.nullable) = false
  ];
  uint64 campaign_count = 2;
  repeated UserEntry users_entries = 3 [
    (gogoproto.nullable) = false
  ];
  repeated Mission missions = 5 [
    (gogoproto.nullable) = false
  ];
  map<uint64, uint64> mission_count = 6;
}
